--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -11,6 +11,9 @@
 
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+  <!-- Fix for missing images -->
+  <script src="/js/fix-images.js"></script>
 </head>
 <body>
   <header class="header">
