--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,15 +6,13 @@
 <title><%= typeof title !== 'undefined' ? title : 'GraphicShop - Professional Design Services' %></title>
 <meta name="description" content="<%= typeof description !== 'undefined' ? description : 'Professional graphic design services for businesses of all sizes.' %>">
 
-<!-- Favicon -->
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
+<!-- Favicon - Simple version that works without files -->
+<link rel="icon" href="/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="/favicon.ico" sizes="any">
 
 <!-- Stylesheets -->
 <link rel="stylesheet" href="/css/main.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-<!-- JavaScript -->
-<script src="/images/placeholder.js"></script>
+<!-- Image handler script to fix missing images -->
+<script src="/js/image-handler.js"></script>
