fix: Clean up duplicate code and simplify styling
- Remove unnecessary CSS and JavaScript files
- Fix header duplication issue
- Add simple image placeholder solution
- Add favicon handler to prevent 404 errors
- Simplify styling approach with inline CSS

--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Complete Your Payment - GraphicShop</title>
-  <link rel="stylesheet" href="/css/style.css">
-  <script src="https://js.stripe.com/v3/"></script>
+  <%- include('partials/head') %>
 </head>
 <body>
   <%- include('partials/header') %>
