--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,17 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><%= title %></title>
-
-  <!-- SEO Meta Tags -->
-  <meta name="description" content="Learn about GraphicShop, our team, our mission, and our approach to graphic design.">
-  <meta name="keywords" content="about us, graphic design agency, design team, design process">
-
-  <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <script src="/js/fix-images.js"></script>
+  <%- include('partials/head') %>
 </head>
 <body>
   <header class="header">
