--- a/views/checkout-success.ejs
+++ b/views/checkout-success.ejs
@@ -1,16 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Order Confirmation - GraphicShop</title>
-
-  <!-- SEO Meta Tags -->
-  <meta name="description" content="Your order has been successfully placed.">
-  <meta name="robots" content="noindex, nofollow">
-
-  <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <%- include('partials/head') %>
 </head>
 <body>
   <a href="#main-content" class="skip-link">Skip to main content</a>
