--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,19 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GraphicShop - Professional Design Services</title>
-
-  <!-- SEO Meta Tags -->
-  <meta name="description" content="Professional graphic design services including logo design, branding, and marketing materials.">
-  <meta name="keywords" content="graphic design, logo design, branding, print design, web graphics">
-
-  <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
-  <!-- Image fix script -->
-  <script src="/js/fix-images.js"></script>
+  <%- include('partials/head') %>
 </head>
 <body>
   <%- include('partials/header') %>
