--- a/views/quote.ejs
+++ b/views/quote.ejs
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Get a quote for your custom graphic design project. Fill out our simple form to receive a price estimate.">
-  <title>Get a Quote - GraphicShop</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <%- include('partials/head') %>
 </head>
 <body>
   <%- include('partials/header') %>
